[package]
name = "fuser-examples"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
experimental = ["fuser/experimental"]
libfuse = ["fuser/libfuse"]
libfuse2 = ["fuser/libfuse2"]
libfuse3 = ["fuser/libfuse3"]
serializable = ["fuser/serializable"]
macfuse-4-compat = ["fuser/macfuse-4-compat"]

[dependencies]
fuser = { path = "..", features = ["experimental"] }
env_logger = "0.11.7"
clap = { version = "4.4", features = ["cargo", "derive"] }
libc = "0.2.51"
log = "0.4.6"
nix = { version = "0.30.0", features = ["poll", "fs", "ioctl"] }
async-trait = "0.1"
parking_lot = "0.12"
serde = { version = "1.0.102", features = ["std", "derive"] }
bincode = "1.3.1"

[[example]]
name = "async_hello"
required-features = ["experimental"]

[[example]]
name = "poll"

[[example]]
name = "poll_client"

[[example]]
name = "notify_inval_entry"

[[example]]
name = "notify_inval_inode"

[[example]]
name = "ioctl"

[[example]]
name = "passthrough"

[[example]]
name = "hello"

[[example]]
name = "null"

[[example]]
name = "simple"
