[package]
name = "fuser-tests"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Test runner for fuser"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["cargo", "derive"] }
nix = { version = "0.30.0", features = ["fs", "mount", "process"] }
tempfile = "3.10.1"
tokio = { version = "1.48.0", features = ["full"] }
