[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"
path = "src/hello.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = { path = "../../."}
clap = { version = "3", features = ["cargo"] }
libc = "0"
env_logger = "0"

