[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = { path = "../../" }
libc = "0.2.51"
env_logger = "0.9"
bincode = "1.3.1"
clap = { version = "3.0", features = ["cargo"] }
log = "0.4.6"
serde = { version = "1.0.102", features = ["std", "derive"] }
